--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -2,10 +2,16 @@
 
 	<div fxLayout="row" fxLayoutAlign="space-between">
 		<h1 translate="guardia.episode.TITLE"></h1>
-		<button *ngIf="episodeState === enAtencion" id="cancel-attention" mat-raised-button color="primary"
-			(click)="cancelAttention()" style="height: 90%;">
-			{{ 'guardia.episode.CANCEL_ATTENTION' | translate | uppercase }}
-		</button>
+		<div fxLayoutGap="5px" style="height: 90%;">
+			<button *ngIf="episodeState === STATES.EN_ATENCION" id="cancel-attention" mat-raised-button color="primary"
+				(click)="cancelAttention()">
+				{{ 'guardia.episode.CANCEL_ATTENTION' | translate | uppercase }}
+			</button>
+			<button *ngIf="episodeState === STATES.EN_ATENCION" id="alta-medica" mat-raised-button color="primary"
+				(click)="altaMedica()">
+				{{ 'guardia.episode.medical_discharge.TITLE' | translate | uppercase }}
+			</button>
+		</div>
 	</div>
 
 	<div fxLayoutGap="24px">
