--- a/front-end/webapp/src/app/modules/presentation/components/document-section/document-section.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/document-section/document-section.component.html
@@ -1,5 +1,5 @@
 <h2 class="mat-h2" [translate]="sectionTitle"></h2>
-<h5 class="recomendado" [translate]="sectionImportance"></h5>
+<h5 *ngIf="sectionImportance" class="recomendado" [translate]="sectionImportance"></h5>
 
 <mat-card>
 	<mat-card-content>
