--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
@@ -7,13 +7,14 @@
 		<section id="diagnosticos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 			<app-diagnosticos [(diagnosis)]="diagnosticos"></app-diagnosticos>
 		</section>
-		<section id="procedimientos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
+		<section id="procedimientos"
+				 *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 			<app-document-section [sectionTitle]="'internaciones.anamnesis.procedimientos.TITLE'"
-				[tableTitle]="'internaciones.anamnesis.procedimientos.TABLE_TITLE'"
-				[columns]="procedimientosService.getColumns()"
-				[data]="procedimientosService.getProcedimientos()"
-				[addRemoveColumn]="true"
-				(removeColumn)="procedimientosService.remove($event)">
+								  [tableTitle]="'internaciones.anamnesis.procedimientos.TABLE_TITLE'"
+								  [columns]="procedimientosService.getColumns()"
+								  [data]="procedimientosService.getProcedimientos()"
+								  [addRemoveColumn]="true"
+								  (removeColumn)="procedimientosService.remove($event)">
 				<ng-container concept-form>
 					<app-concepts-search
 						*ngIf="!procedimientosService.getSnomedConcept() else procedimientoForm"
@@ -23,14 +24,15 @@
 
 					<ng-template #procedimientoForm>
 						<form [formGroup]="procedimientosService.getForm()"
-							(ngSubmit)="procedimientosService.addToList()">
+							  (ngSubmit)="procedimientosService.addToList()">
 							<mat-form-field appearance="outline">
 								<mat-label [translate]="'internaciones.anamnesis.procedimientos.TIPO'">
 								</mat-label>
-								<input id="procedimiento-input" matInput type="text" formControlName="snomed" name="snomed"
-									readonly matTooltip="{{procedimientosService.getSnomedConcept().pt }}">
+								<input id="procedimiento-input" matInput type="text" formControlName="snomed"
+									   name="snomed"
+									   readonly matTooltip="{{procedimientosService.getSnomedConcept().pt }}">
 								<button id="clear-procedimiento" mat-button matSuffix color="warn" mat-icon-button
-									(click)="procedimientosService.resetForm()">
+										(click)="procedimientosService.resetForm()">
 									<mat-icon>close</mat-icon>
 								</button>
 							</mat-form-field>
@@ -39,14 +41,14 @@
 								<mat-label [translate]="'internaciones.anamnesis.procedimientos.FECHA'">
 								</mat-label>
 								<input matInput id="fecha_procedimiento" [matDatepicker]="datePicker"
-									formControlName="performedDate" [max]="procedimientosService.getFechaMax()">
+									   formControlName="performedDate" [max]="procedimientosService.getFechaMax()">
 								<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
 								<mat-datepicker #datePicker></mat-datepicker>
 							</mat-form-field>
 
 							<div align="end">
 								<button id="submit_procedimiento" class="uppercase" mat-raised-button color="primary"
-									type="submit">
+										type="submit">
 									<span
 										[translate]="'internaciones.anamnesis.procedimientos.buttons.ADD'"></span>
 								</button>
@@ -57,7 +59,8 @@
 				</ng-container>
 			</app-document-section>
 		</section>
-		<section id="observations" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD','ENFERMERO']">
+		<section id="observations"
+				 *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD','ENFERMERO']">
 			<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 			<mat-card>
 				<mat-card-content formGroupName="observations">
@@ -65,8 +68,15 @@
 						<mat-label [translate]="'internaciones.anamnesis.observations.CURRENT_DISEASE'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<textarea matInput type="text" id="currentIllnessNote" name="currentIllnessNote"
-								formControlName="currentIllnessNote">
+									  formControlName="currentIllnessNote"
+
+							>
 							</textarea>
+							<mat-error *ngIf="hasError(form.get('observations'), 'maxlength', 'currentIllnessNote')"
+									   translate="forms.MAX_LENGTH_ERROR"
+									   [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
+							</mat-error>
+
 						</mat-form-field>
 					</div>
 					<div *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
@@ -74,39 +84,71 @@
 						</mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<textarea matInput type="text" id="physicalExamNote" name="physicalExamNote"
-								formControlName="physicalExamNote">
+									  formControlName="physicalExamNote"
+
+							>
 							</textarea>
+							<mat-error *ngIf="hasError(form.get('observations'), 'maxlength', 'physicalExamNote')"
+									   translate="forms.MAX_LENGTH_ERROR"
+									   [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 						<mat-label [translate]="'internaciones.anamnesis.observations.STUDIES_PROCEDURES'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<textarea matInput type="text" id="studiesSummaryNote" name="studiesSummaryNote"
-								formControlName="studiesSummaryNote">
+									  formControlName="studiesSummaryNote"
+
+							>
 							</textarea>
+							<mat-error *ngIf="hasError(form.get('observations'), 'maxlength', 'studiesSummaryNote')"
+									   translate="forms.MAX_LENGTH_ERROR"
+									   [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
+							</mat-error>
 						</mat-form-field>
 					</div>
-					<div *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD','ENFERMERO']">
+					<div
+						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD','ENFERMERO']">
 						<mat-label [translate]="'internaciones.anamnesis.observations.PATIENT_PROGRESS'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<textarea matInput type="text" id="evolutionNote" name="evolutionNote"
-								formControlName="evolutionNote">
+									  formControlName="evolutionNote"
+
+							>
 							</textarea>
+							<mat-error *ngIf="hasError(form.get('observations'), 'maxlength', 'evolutionNote')"
+									   translate="forms.MAX_LENGTH_ERROR"
+									   [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 						<mat-label [translate]="'internaciones.anamnesis.observations.CLINICAL_IMPRESSION'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<textarea matInput type="text" id="clinicalImpressionNote" name="clinicalImpressionNote"
-								formControlName="clinicalImpressionNote">
+									  formControlName="clinicalImpressionNote"
+
+							>
 							</textarea>
+							<mat-error *ngIf="hasError(form.get('observations'), 'maxlength', 'clinicalImpressionNote')"
+									   translate="forms.MAX_LENGTH_ERROR"
+									   [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 						<mat-label [translate]="'internaciones.anamnesis.observations.OTHERS'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
-							<textarea matInput type="text" id="otherNote" name="otherNote" formControlName="otherNote">
+							<textarea matInput type="text" id="otherNote" name="otherNote"
+									  formControlName="otherNote"
+
+							>
 							</textarea>
+							<mat-error *ngIf="hasError(form.get('observations'), 'maxlength', 'otherNote')"
+									   translate="forms.MAX_LENGTH_ERROR"
+									   [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
+							</mat-error>
 						</mat-form-field>
 					</div>
 
@@ -122,20 +164,20 @@
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.HEART_RATE'"></mat-label>
 							<mat-form-field [floatLabel]="'never'" appearance="outline">
 								<input id="heart_rate" name="heart_rate" formControlName="value" placeholder="00"
-									type="number" matInput>
+									   type="number" matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.heartRate.effectiveTime"
-								(update)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
+												(update)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="respiratoryRate">
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.RESPIRATORY_RATE'">
 							</mat-label>
 							<mat-form-field [floatLabel]="'never'" appearance="outline">
 								<input id="respiratory_rate" name="respiratory_rate" formControlName="value"
-									placeholder="00" type="number" matInput>
+									   placeholder="00" type="number" matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.respiratoryRate.effectiveTime"
-								(update)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
+												(update)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
 						</div>
 					</div>
 
@@ -144,19 +186,20 @@
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.TEMPERATURE'"></mat-label>
 							<mat-form-field [floatLabel]="'never'" appearance="outline">
 								<input id="temperature" name="temperature" formControlName="value" placeholder="00.0"
-									type="number" matInput>
+									   type="number" matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.temperature.effectiveTime"
-								(update)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
+												(update)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="bloodOxygenSaturation">
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.BLOOD_OXYGEN_SATURATION'">
 							</mat-label>
 							<mat-form-field [floatLabel]="'never'" appearance="outline">
 								<input id="blood_oxygen_saturation" name="blood_oxygen_saturation"
-									formControlName="value" placeholder="00" type="number" matInput>
+									   formControlName="value" placeholder="00" type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [effectiveTime]="form.value.vitalSigns.bloodOxygenSaturation.effectiveTime"
+							<app-effective-time
+								[effectiveTime]="form.value.vitalSigns.bloodOxygenSaturation.effectiveTime"
 								(update)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')">
 							</app-effective-time>
 						</div>
@@ -168,9 +211,10 @@
 							</mat-label>
 							<mat-form-field [floatLabel]="'never'" appearance="outline">
 								<input id="systolic_blood_pressure" name="systolicBloodPressure" formControlName="value"
-									placeholder="00" type="number" matInput>
+									   placeholder="00" type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [effectiveTime]="form.value.vitalSigns.systolicBloodPressure.effectiveTime"
+							<app-effective-time
+								[effectiveTime]="form.value.vitalSigns.systolicBloodPressure.effectiveTime"
 								(update)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')">
 							</app-effective-time>
 						</div>
@@ -180,9 +224,10 @@
 							</mat-label>
 							<mat-form-field [floatLabel]="'never'" appearance="outline">
 								<input id="diastolic_blood_pressure" name="diastolicBloodPressure"
-									formControlName="value" placeholder="00" type="number" matInput>
+									   formControlName="value" placeholder="00" type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [effectiveTime]="form.value.vitalSigns.diastolicBloodPressure.effectiveTime"
+							<app-effective-time
+								[effectiveTime]="form.value.vitalSigns.diastolicBloodPressure.effectiveTime"
 								(update)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')">
 							</app-effective-time>
 						</div>
@@ -209,20 +254,20 @@
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
 							<input id="height"
-							       name="height"
-							       formControlName="height"
-							       placeholder="Ej: 180"
-							       type="number"
-							       matInput>
+								   name="height"
+								   formControlName="height"
+								   placeholder="Ej: 180"
+								   type="number"
+								   matInput>
 							<mat-error
-									*ngIf="hasError(this.form.controls.anthropometricData, 'min', 'height')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]="{min: getError(this.form.controls.anthropometricData, 'min', 'height').min}">
+								*ngIf="hasError(this.form.controls.anthropometricData, 'min', 'height')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.anthropometricData, 'min', 'height').min}">
 							</mat-error>
 							<mat-error
-									*ngIf="hasError(this.form.controls.anthropometricData, 'max', 'height')"
-									[translate]="'forms.MAX_ERROR'"
-									[translateParams]="{max: getError(this.form.controls.anthropometricData, 'max', 'height').max}">
+								*ngIf="hasError(this.form.controls.anthropometricData, 'max', 'height')"
+								[translate]="'forms.MAX_ERROR'"
+								[translateParams]="{max: getError(this.form.controls.anthropometricData, 'max', 'height').max}">
 							</mat-error>
 						</mat-form-field>
 					</div>
@@ -230,20 +275,20 @@
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
 							<input id="weight"
-							       name="weight"
-							       formControlName="weight"
-							       placeholder="Ej: 70"
-							       type="number"
-							       matInput>
+								   name="weight"
+								   formControlName="weight"
+								   placeholder="Ej: 70"
+								   type="number"
+								   matInput>
 							<mat-error
-									*ngIf="hasError(this.form.controls.anthropometricData, 'min', 'weight')"
-									[translate]="'forms.MIN_ERROR'"
-									[translateParams]="{min: getError(this.form.controls.anthropometricData, 'min', 'weight').min}">
+								*ngIf="hasError(this.form.controls.anthropometricData, 'min', 'weight')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.anthropometricData, 'min', 'weight').min}">
 							</mat-error>
 							<mat-error
-									*ngIf="hasError(this.form.controls.anthropometricData, 'max', 'weight')"
-									[translate]="'forms.MAX_ERROR'"
-									[translateParams]="{max: getError(this.form.controls.anthropometricData, 'max', 'weight').max}">
+								*ngIf="hasError(this.form.controls.anthropometricData, 'max', 'weight')"
+								[translate]="'forms.MAX_ERROR'"
+								[translateParams]="{max: getError(this.form.controls.anthropometricData, 'max', 'weight').max}">
 							</mat-error>
 						</mat-form-field>
 					</div>
@@ -266,7 +311,7 @@
 				<span class="uppercase" [translate]="'buttons.BACK'"></span>
 			</button>
 			<button id="sign-confirm" mat-raised-button type="submit" color="primary"
-				*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
+					*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
 				<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.CONFIRM'"></span>
 			</button>
 		</section>
