tg-3225 quitar FF habilitarSecondaryHeaderLogo

--- a/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.html
@@ -3,7 +3,7 @@
 		<ng-content></ng-content>
 		<div class="logo-container">
 			<app-logo></app-logo>
-			<app-logo *featureFlag="'habilitarSecondaryHeaderLogo'" [isSecondaryLogo]="true"></app-logo>
+			<app-logo [isSecondaryLogo]="true"></app-logo>
 		</div>
 	</mat-toolbar-row>
 </mat-toolbar>
