--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
@@ -1,78 +1,138 @@
 <div class="page" fxLayout="column">
-	<form [formGroup]="adultGynecologicalForm" fxLayout="column">
+	<div fxLayout="column">
 		<section id="triage">
 			<app-triage (triageCategoryIdChange)="setTriageCategoryId($event)"
 						(doctorsOfficeIdChange)="setDoctorsOfficeId($event)">
 			</app-triage>
 		</section>
 
-		<section id="vital-signs" fxLayout="column">
-			<h4 [translate]="'guardia.triage.VITAL_SIGNS'"></h4>
-			<div fxLayout="column" fxFlex="grow shrink initial">
-				<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
-					<mat-form-field fxFlex="50%" appearance="outline">
-						<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
-						<input matInput type="number" id="heartRate" name="heartRate" formControlName="heartRate"
-							   placeholder="{{'guardia.triage.HEART_RATE' | translate }}">
-						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'heartRate')"
-								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-					</mat-form-field>
-					<mat-form-field fxFlex="50%" appearance="outline">
-						<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
-						<input matInput type="number" id="respiratoryRate" name="respiratoryRate"
-							   formControlName="respiratoryRate"
-							   placeholder="{{'guardia.triage.RESPIRATORY_RATE' | translate }}">
-						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'respiratoryRate')"
-								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-					</mat-form-field>
-				</div>
-				<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
-					<mat-form-field fxFlex="50%" appearance="outline">
-						<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
-						<input matInput type="number" id="temperature" name="temperature" formControlName="temperature"
-							   placeholder="{{'guardia.triage.TEMPERATURE' | translate }}">
-						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'temperature')"
-								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-					</mat-form-field>
-					<mat-form-field fxFlex="50%" appearance="outline">
-						<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
-						<input matInput type="number" id="bloodOxygenSaturation" name="bloodOxygenSaturation"
-							   formControlName="bloodOxygenSaturation"
-							   placeholder="{{'guardia.triage.OXYGEN_SATURATION' | translate }}">
-						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'bloodOxygenSaturation')"
-								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-					</mat-form-field>
-				</div>
-				<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
-					<mat-form-field fxFlex="50%" appearance="outline">
-						<mat-label [translate]="'guardia.triage.SYSTOLIC_BLOOD'"></mat-label>
-						<input matInput type="number" id="systolicBloodPressure" name="systolicBloodPressure"
-							   formControlName="systolicBloodPressure"
-							   placeholder="{{'guardia.triage.SYSTOLIC_BLOOD' | translate }}">
-						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'systolicBloodPressure')"
-								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-					</mat-form-field>
-					<mat-form-field fxFlex="50%" appearance="outline">
-						<mat-label [translate]="'guardia.triage.DIASTOLIC_BLOOD'"></mat-label>
-						<input matInput type="number" id="diastolicBloodPressure" name="diastolicBloodPressure"
-							   formControlName="diastolicBloodPressure"
-							   placeholder="{{'guardia.triage.DIASTOLIC_BLOOD' | translate }}">
-						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'diastolicBloodPressure')"
-								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-					</mat-form-field>
-				</div>
-			</div>
-		</section>
+		<form [formGroup]="vitalSignsForm">
+			<section id="vital-signs" fxLayout="column">
+				<h4 [translate]="'guardia.triage.VITAL_SIGNS'"></h4>
 
-		<section id="evaluation" fxLayout="column">
-			<h4 [translate]="'guardia.triage.EVALUATION'"></h4>
+				<div fxLayout="column" fxFlex="grow shrink initial">
+					<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
+						<div fxLayout="column" formGroupName="heartRate">
+							<mat-form-field fxFlex="50%" appearance="outline">
+								<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
+								<input matInput type="number" id="heartRate" name="heartRate"
+									   formControlName="value"
+									   placeholder="00"
+								>
+								<mat-error *ngIf="hasError(vitalSignsForm, 'min', 'heartRate')"
+										   [translate]="'forms.MIN_ERROR'"
+										   [translateParams]=" { min: getError(vitalSignsForm, 'min', 'heartRate').min }">
+								</mat-error>
+							</mat-form-field>
+							<app-effective-time [effectiveTime]="vitalSignsForm.value.heartRate.effectiveTime"
+												(update)="vitalSignsFormService.setVitalSignEffectiveTime($event, vitalSignsForm,'heartRate')">
+							</app-effective-time>
+						</div>
+
+						<div fxLayout="column" formGroupName="respiratoryRate">
+							<mat-form-field fxFlex="50%" appearance="outline">
+								<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
+								<input matInput type="number" id="respiratoryRate" name="respiratoryRate"
+									   formControlName="value"
+									   placeholder="00"
+								>
+								<mat-error *ngIf="hasError(vitalSignsForm, 'min', 'respiratoryRate')"
+										   [translate]="'forms.MIN_ERROR'"
+										   [translateParams]=" { min: getError(vitalSignsForm, 'min', 'respiratoryRate').min }">
+								</mat-error>
+							</mat-form-field>
+							<app-effective-time [effectiveTime]="vitalSignsForm.value.respiratoryRate.effectiveTime"
+												(update)="vitalSignsFormService.setVitalSignEffectiveTime($event, vitalSignsForm,'respiratoryRate')">
+							</app-effective-time>
+						</div>
+					</div>
+
+					<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
+						<div fxLayout="column" formGroupName="temperature">
+							<mat-form-field fxFlex="50%" appearance="outline">
+								<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
+								<input matInput type="number" id="temperature" name="temperature"
+									   formControlName="value"
+									   placeholder="00.0"
+								>
+								<mat-error *ngIf="hasError(vitalSignsForm, 'min', 'temperature')"
+										   [translate]="'forms.MIN_ERROR'"
+										   [translateParams]=" { min: getError(vitalSignsForm, 'min', 'temperature').min }">
+								</mat-error>
+							</mat-form-field>
+							<app-effective-time [effectiveTime]="vitalSignsForm.value.temperature.effectiveTime"
+												(update)="vitalSignsFormService.setVitalSignEffectiveTime($event, vitalSignsForm, 'temperature')">
+							</app-effective-time>
+						</div>
+
+						<div fxLayout="column" formGroupName="bloodOxygenSaturation">
+							<mat-form-field fxFlex="50%" appearance="outline">
+								<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
+								<input matInput type="number" id="bloodOxygenSaturation" name="bloodOxygenSaturation"
+									   formControlName="value"
+									   placeholder="00"
+								>
+								<mat-error *ngIf="hasError(vitalSignsForm, 'min', 'bloodOxygenSaturation')"
+										   [translate]="'forms.MIN_ERROR'"
+										   [translateParams]=" { min: getError(vitalSignsForm, 'min', 'bloodOxygenSaturation').min }">
+								</mat-error>
+							</mat-form-field>
+							<app-effective-time [effectiveTime]="vitalSignsForm.value.bloodOxygenSaturation.effectiveTime"
+												(update)="vitalSignsFormService.setVitalSignEffectiveTime($event, vitalSignsForm, 'bloodOxygenSaturation')">
+							</app-effective-time>
+						</div>
+					</div>
+
+					<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
+						<div fxLayout="column" formGroupName="systolicBloodPressure">
+							<mat-form-field fxFlex="50%" appearance="outline">
+								<mat-label [translate]="'guardia.triage.SYSTOLIC_BLOOD'"></mat-label>
+								<input matInput type="number" id="systolicBloodPressure" name="systolicBloodPressure"
+									   formControlName="value"
+									   placeholder="00"
+								>
+								<mat-error *ngIf="hasError(vitalSignsForm, 'min', 'systolicBloodPressure')"
+										   [translate]="'forms.MIN_ERROR'"
+										   [translateParams]=" { min: getError(vitalSignsForm, 'min', 'systolicBloodPressure').min }">
+								</mat-error>
+							</mat-form-field>
+							<app-effective-time [effectiveTime]="vitalSignsForm.value.systolicBloodPressure.effectiveTime"
+												(update)="vitalSignsFormService.setVitalSignEffectiveTime($event, vitalSignsForm, 'systolicBloodPressure')">
+							</app-effective-time>
+						</div>
+
+						<div fxLayout="column" formGroupName="diastolicBloodPressure">
+							<mat-form-field fxFlex="50%" appearance="outline">
+								<mat-label [translate]="'guardia.triage.DIASTOLIC_BLOOD'"></mat-label>
+								<input matInput type="number" id="diastolicBloodPressure" name="diastolicBloodPressure"
+									   formControlName="value"
+									   placeholder="00"
+								>
+								<mat-error *ngIf="hasError(vitalSignsForm, 'min', 'diastolicBloodPressure')"
+										   [translate]="'forms.MIN_ERROR'"
+										   [translateParams]=" { min: getError(vitalSignsForm, 'min', 'diastolicBloodPressure').min }">
+								</mat-error>
+							</mat-form-field>
+							<app-effective-time [effectiveTime]="vitalSignsForm.value.diastolicBloodPressure.effectiveTime"
+												(update)="vitalSignsFormService.setVitalSignEffectiveTime($event, vitalSignsForm, 'diastolicBloodPressure')">
+							</app-effective-time>
+						</div>
+					</div>
+				</div>
+			</section>
+		</form>
+
+		<form [formGroup]="adultGynecologicalForm">
+			<section id="evaluation" fxLayout="column">
+				<h4 [translate]="'guardia.triage.EVALUATION'"></h4>
 				<mat-form-field fxFlex="100%" appearance="outline">
 				<textarea matInput placeholder="Descripción" formControlName="evaluation"
 						  name="evaluation"></textarea>
-			</mat-form-field>
-		</section>
+				</mat-form-field>
+			</section>
+		</form>
 
-	</form>
+	</div>
 
 	<div fxLayoutGap="10px" fxLayout="row" fxLayoutAlign="flex-end">
 		<button mat-stroked-button class="uppercase" (click)="back()">
